# Holyday-Manager

./: Cargo.toml  README.md  build.rs  build.sh  data.json
src/: holyday_manager.rs  main.rs
