[package]
name = "holyday-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
eframe = "0.19.0"
image = "0.24.4"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
